add project 25 - my startup idea to my portfolio

--- a/index.html
+++ b/index.html
@@ -377,6 +377,18 @@
                         <img class="img-fluid" src="img/portfolio/proj-28.jpg" alt="">
                     </div>
                 </div>
+
+                <!-- Portfolio Item 25 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal25">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-29.jpg" alt="">
+                    </div>
+                </div>
             </div>
             <!-- /.row -->
 
@@ -1442,6 +1454,42 @@
                                 <p class="mb-5">April 2020 - This project took some time to build b/c it turned out to be more complex than it looked. But I was satisfied with the end result.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/024.quizApps/quiz-level-1/index.html" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 25 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal25" tabindex="-1" role="dialog" aria-labelledby="portfolioModal25Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">play spanish</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-29.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">My very first startup idea! Started on April 24, 2020 and finished at 4:30PM April 29, 2020. Anything added from this date & time forward is an upgrade. It took me 56 Hours: editing videos, styling & javascript coding.
+                                    I can't believe that I finally turned my idea into an app.</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/024.quizApps/quiz-level-2/index.html" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
