--- a/projects/024.quizApps/quiz-level-2/index.html
+++ b/projects/024.quizApps/quiz-level-2/index.html
@@ -10,20 +10,23 @@
 </head>
 
 <body>
-    <!-- started April 24, 2020  -->
+    <!-- started April 24, 2020 and finished at 4:30PM April 29, 2020 -->
+    <!-- Anything added from this date and time on is an upgrade  -->
+    <!-- It took 56 Hours: editing videos, styling & javascript coding  -->
     <div id="container">
         <!-- Section 1 - START -------------------------------------------->
         <div class="start">
             <h4 class="start-header">PLAY SPANISH</h4>
             <div class="start-body">
-                <p>You are going to learn Spanish in a completely different and fun way. All you got to do is just 4 things:</p>
-                <ol>
+                <img class="startImg" src="img/brain.jpg" alt="">
+                <p class="startText">You are going to learn Spanish in a completely different and fun way. All you got to do is just 4 things:</p>
+                <ol class="startText">
                     <li>Learn <u>vocab</u>. through actions</li>
                     <li>Learn a <u>story</u> in 100% Spanish</li>
                     <li>Test your Spanish through <u>quiz</u></li>
                     <li><u>Retell</u> the story in your words</li>
                 </ol>
-                <p>To retain the vocabulary words easily, you must <u>do the actions</u> <i>(some words don't have actions)</i> & <u>retell the story</u> in your own words! <br><br>Enjoy!</p>
+                <p class="startText">To retain the vocabulary words easily, you must <u>do the actions</u> <i>(some words don't have actions)</i> & <u>retell the story</u> in your own words! <br><br>Enjoy!</p>
             </div>
             <div class="start-btn">
                 <button class="startBtn">START</button>
@@ -90,7 +93,13 @@
             <h4 class="retell-header">RETELL</h4>
             <div class="retell-body">
                 <img class="image" src="img/talk.jpg" alt="">
-                <p>For this story to be engraved on your memory, you must <u>retell the story</u> in your own words! <br><br>Thank you for using this app!</p>
+                <div class="imageText">
+                    <p>See? Language learning can be easy and fun if you use the right method!</p>
+                    <p>Now, for this story to be engraved on your memory, you must <u>retell the story</u> in your own words!</p>
+                    <i>Subscribe to <a href="https://www.youtube.com/emuallim" target="_blank">Emuallim</a> on YouTube for awesome stuff about language learning!</i> <br><br>
+                    <i>Contact <a href="https://t.me/Mbassador" target="_blank">@Mbassador</a> on telegram if you have any questions or suggestions!</i>
+                    <p>Thank you for using this app!</p>
+                </div>
             </div>
             <div class="reload-btn">
                 <button class="btn reloadBtn">RESTART</button>
