add a new project "online courses" to my portfolio

--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@
                         <img class="img-fluid" src="img/portfolio/proj-29.jpg" alt="">
                     </div>
                 </div>
+
+                <!-- Portfolio Item 26 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal26">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-30.jpg" alt="">
+                    </div>
+                </div>
+
             </div>
             <!-- /.row -->
 
@@ -212,24 +225,17 @@
             <div class="row">
                 <div class="col-lg-4 ml-auto">
                     <p class="lead">My name is Muhiddin and I love front-end development but I also get a kick out of anything design and web related. I enjoy figuring out how things work and making thoughtful, engaging, and functional web applications that have a clean
-                        and simple design.
+                        and simple design. I've recently completed <i>"100 days of code"</i> challenge in 10 days by coding 10 hours a day.
                     </p>
+
+                </div>
+                <div class="col-lg-4 mr-auto">
                     <p class="lead">
-                        I’ve built web applications using <b>HTML5, CSS3, Bootstrap, Javascript, JQuery (and React soon)</b> and have a foundation in web design and development. I've recently completed 300 hours of
+                        I’ve built web applications using <b>HTML5, CSS3, Sass, Bootstrap, Javascript, JQuery</b> (and React soon) and have a foundation in web design and development. I've completed 300 hours of
                         <a href="http://www.freecodecamp.org">
                             <i style="color: white;">“Responsive Web Design Projects”</i>
                         </a>
                         certification at www.freecodecamp.org and I’m coding to earn their “<i>Verified Front End Development Certication</i>.”
-                    </p>
-                </div>
-                <div class="col-lg-4 mr-auto">
-                    <p class="lead">
-                        Before moving into development, I worked as an English teacher almost for 9 years and <b>helped more than 600 students</b> get into top international universities in Uzbekistan and abroad. Since I like to challenge myself from
-                        time to time, I took the IELTS <i>(International English Language Testing System)</i> exam and got an overall band score of 8.0 out of 9.0 with a <b>perfect score of 9.0 in speaking</b> to join the top 2% of non-native English
-                        speakers of the world as a self-taught language learner.
-                    </p>
-                    <p class="lead">
-                        I can’t wait to reach the same level of fluency in computer languages, especially in Javascript.
                     </p>
                 </div>
             </div>
@@ -237,8 +243,7 @@
             <!-- About Section Button -->
             <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fhIuG_CcIvTxxUXqqhlStVtxyL8diMTh/view?usp=drivesdk" target="_blank">
-                    <i class="fas fa-download mr-2"></i> Resume
-                </a>
+                    <i class="fas fa-download mr-2"></i>Resume</a>
             </div>
 
         </div>
@@ -650,6 +655,41 @@
                                     I can't believe that I finally turned my idea into an app.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/024.quizApps/quiz-level-2/index.html" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 26 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal26" tabindex="-1" role="dialog" aria-labelledby="portfolioModal26Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">online courses</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-30.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">I did the javascript part of this project. You can store data in a local storage and retrieve it later. You can add courses to a cart and it gets saved in the local storage and you can remove the items.</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/023.eCourses/index.html" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
