--- a/projects/miscalleneous/oldProjects/index.html
+++ b/projects/miscalleneous/oldProjects/index.html
@@ -77,6 +77,16 @@
         <p>
             April 2020 - This is another project that I built recently. The idea comes from "100 JavaScript Projects"
         </p>
+        <div class="col-lg-4 mr-auto">
+            <p class="lead">
+                Before moving into development, I worked as an English teacher almost for 9 years and <b>helped more than 600 students</b> get into top international universities in Uzbekistan and abroad. Since I like to challenge myself from time to
+                time, I took the IELTS <i>(International English Language Testing System)</i> exam and got an overall band score of 8.0 out of 9.0 with a <b>perfect score of 9.0 in speaking</b> to join the top 2% of non-native English speakers of the
+                world as a self-taught language learner.
+            </p>
+            <p class="lead">
+                I can’t wait to reach the same level of fluency in computer languages, especially in Javascript.
+            </p>
+        </div>
     </div>
 </body>
 
