add a new project (quiz level 3) to my js projects

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                                 <p class="mb-5">My very first startup idea! Started on April 24, 2020 and finished at 4:30PM April 29, 2020. Anything added from this date & time forward is an upgrade. It took me 56 Hours: editing videos, styling & javascript coding.
                                     I can't believe that I finally turned my idea into an app.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
-                                <a class="btn btn-primary" href="projects/024.quizApps/quiz-level-2/index.html" target="_blank">See Page</a>
+                                <a class="btn btn-primary" href="projects/025.playSpanish/index.html" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
