add new practice files to my jspractice folder

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
             <!-- About Section Button -->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fhIuG_CcIvTxxUXqqhlStVtxyL8diMTh/view?usp=drivesdk" target="_blank">
+                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/open?id=1IWbhyldtH9gJC2wGJgOh8H8F3aPc-s8Y" target="_blank">
                     <i class="fas fa-download mr-2"></i>Resume</a>
             </div>
 
