add musicalGroups.js to milestone-2 index.html

--- a/projects/miscalleneous/MillionCoders/Milestone-2/index.html
+++ b/projects/miscalleneous/MillionCoders/Milestone-2/index.html
@@ -4,20 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script defer src="catpics.js"></script> -->
     <title>MileStone-2</title>
 </head>
 
 <body>
-    <h1>Click anywhere</h1>
-    <script>
-        document.body.addEventListener('click', function() {
-            var myParent = document.getElementsByTagName("h1")[0];
-            var myImage = document.createElement("img");
-            myImage.src = 'https://thecatapi.com/api/images/get?format=src&type=gif';
-            myParent.appendChild(myImage);
-            myImage.style.marginLeft = "160px";
-        });
-    </script>
+    <h1>Odd or even?</h1>
+    <!-- <script src="oddOrEven.js"></script> -->
+    <script src="musicalGroups.js"></script>
+
 </body>
 
 </html>
