--- a/projects/miscalleneous/MillionCoders/Milestone-2/index.html
+++ b/projects/miscalleneous/MillionCoders/Milestone-2/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script defer src="catpics.js"></script> -->
     <title>MileStone-2</title>
 </head>
 
 <body>
     <h1>Odd or even?</h1>
+    <!-- <script defer src="catpics.js"></script> -->
     <!-- <script src="oddOrEven.js"></script> -->
-    <script src="musicalGroups.js"></script>
-
+    <!-- <script src="musicalGroups.js"></script> -->
+    <script src="murderMystery.js"></script>
 </body>
 
 </html>
