complete "check balance" project
It was so hard that I had to google for the solution. I guess the problem was in the code requirements of the website. Coding is a flexible thing and it can be hard when u try to do it only one way. I tried to do it my way but it didn't work. Then, I learned a lesson from the solution. You don't have to put curly brackets "{ -- }" after the last "else" element.

--- a/projects/miscalleneous/MillionCoders/Milestone-2/index.html
+++ b/projects/miscalleneous/MillionCoders/Milestone-2/index.html
@@ -12,7 +12,9 @@
     <!-- <script defer src="catpics.js"></script> -->
     <!-- <script src="oddOrEven.js"></script> -->
     <!-- <script src="musicalGroups.js"></script> -->
-    <script src="murderMystery.js"></script>
+    <!-- <script src="murderMystery.js"></script> -->
+    <!-- <script src="checkBalance.js"></script> -->
+    <script src="iceCream.js"></script>
 </body>
 
 </html>
