start lesson 4 - loops

--- a/projects/miscalleneous/millionCoders/Milestone-2/Lesson 3 - Conditionals/index.html
+++ b/projects/miscalleneous/millionCoders/Milestone-2/Lesson 3 - Conditionals/index.html
@@ -8,13 +8,17 @@
 </head>
 
 <body>
-    <h1>Odd or even?</h1>
+    <h1>Conditionals</h1>
     <!-- <script defer src="catpics.js"></script> -->
     <!-- <script src="oddOrEven.js"></script> -->
     <!-- <script src="musicalGroups.js"></script> -->
     <!-- <script src="murderMystery.js"></script> -->
     <!-- <script src="checkBalance.js"></script> -->
-    <script src="iceCream.js"></script>
+    <!-- <script src="iceCream.js"></script> -->
+    <!-- <script src="what2wear.js"></script> -->
+    <!-- <script src="ternaryOperator.js"></script> -->
+    <!-- <script src="switchStatement.js"></script> -->
+    <script src="back2school.js"></script>
 </body>
 
 </html>
