finish lesson 7 millionCoders by Udacity

--- a/projects/miscalleneous/millionCoders/Milestone-2/lesson 4 - loops/index.html
+++ b/projects/miscalleneous/millionCoders/Milestone-2/lesson 4 - loops/index.html
@@ -11,7 +11,8 @@
     <h1>Lesson 3 - Loops</h1>
     <!-- <script src="01.FizzBuzz.js"></script> -->
     <!-- <script src="03.countdown.js"></script> -->
-    <script src="06.findMySeat.js"></script>
+    <!-- <script src="06.findMySeat.js"></script> -->
+    <script src="07.laugh.js"></script>
     <script>
     </script>
 </body>
