--- a/projects/miscalleneous/millionCoders/Milestone-2/pixelArt/index.html
+++ b/projects/miscalleneous/millionCoders/Milestone-2/pixelArt/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,14 +15,15 @@
         Grid Height:
         <input type="number" id="inputHeight" name="height" min="1" value="1"> Grid Width:
         <input type="number" id="inputWidth" name="width" min="1" value="1">
-        <input type="submit">
+        <input type="submit" id="submit">
     </form>
 
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
 
     <h2>Design Canvas</h2>
-    <table id="pixelCanvas"></table>
+    <table id="pixelCanvas">
+    </table>
 
     <script src="designs.js"></script>
 </body>
