--- a/projects/miscalleneous/50projects/04.Advanced/index.html
+++ b/projects/miscalleneous/50projects/04.Advanced/index.html
@@ -5,11 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced</title>
+    <style>
+        body {
+            background: green;
+            color: white;
+            font-family: sans-serif;
+            font-size: .9rem;
+        }
+    </style>
 </head>
 
 <body>
     <h1>04 JavaScript Advanced Methods</h1>
-
+    <button id="btn">click</button>
+    <h3 class="output">
+        <p>vachaach</p>
+    </h3>
+    <div class="rect">red here</div>
+    <div class="rect2">blue here</div>
+    <!-- <script src="random1to20.js"></script> -->
+    <!-- <script src="randomArray.js"></script> -->
+    <!-- <script src="randomBgc.js"></script> -->
+    <!-- <script src="4keyboardMover.js"></script> -->
+    <!-- <script src="5dateMethod.js"></script> -->
+    <!-- <script src="6LocalStorage.js"></script> -->
+    <!-- <script src="7boundingClientRect.js"></script> -->
+    <script src="8timer.js"></script>
 </body>
 
 </html>
