--- a/projects/miscalleneous/50projects/04.Advanced/index.html
+++ b/projects/miscalleneous/50projects/04.Advanced/index.html
@@ -21,8 +21,8 @@
     <h3 class="output">
         <p>vachaach</p>
     </h3>
-    <div class="rect">red here</div>
-    <div class="rect2">blue here</div>
+    <div class="rect"></div>
+    <div class="rect2"></div>
     <!-- <script src="random1to20.js"></script> -->
     <!-- <script src="randomArray.js"></script> -->
     <!-- <script src="randomBgc.js"></script> -->
@@ -30,7 +30,10 @@
     <!-- <script src="5dateMethod.js"></script> -->
     <!-- <script src="6LocalStorage.js"></script> -->
     <!-- <script src="7boundingClientRect.js"></script> -->
-    <script src="8timer.js"></script>
+    <!-- <script src="8timer.js"></script> -->
+    <!-- <script src="9encoDecode.js"></script> -->
+    <!-- <script src="10regex.js"></script> -->
+    <script src="11prototype.js"></script>
 </body>
 
 </html>
