try & catch lesson done

--- a/projects/miscalleneous/50projects/04.Advanced/index.html
+++ b/projects/miscalleneous/50projects/04.Advanced/index.html
@@ -17,10 +17,8 @@
 
 <body>
     <h1>04 JavaScript Advanced Methods</h1>
-    <button id="btn">click</button>
-    <h3 class="output">
-        <p>vachaach</p>
-    </h3>
+    <!-- <button id="btn">click</button> -->
+    <h3 class="output"></h3>
     <div class="rect"></div>
     <div class="rect2"></div>
     <!-- <script src="random1to20.js"></script> -->
@@ -33,7 +31,8 @@
     <!-- <script src="8timer.js"></script> -->
     <!-- <script src="9encoDecode.js"></script> -->
     <!-- <script src="10regex.js"></script> -->
-    <script src="11prototype.js"></script>
+    <!-- <script src="11prototype.js"></script> -->
+    <script src="12try&catch.js"></script>
 </body>
 
 </html>
