--- a/projects/miscalleneous/50projects/04.Advanced/index.html
+++ b/projects/miscalleneous/50projects/04.Advanced/index.html
@@ -7,7 +7,7 @@
     <title>Advanced</title>
     <style>
         body {
-            background: green;
+            /* background: green; */
             color: white;
             font-family: sans-serif;
             font-size: .9rem;
@@ -20,7 +20,7 @@
     <!-- <button id="btn">click</button> -->
     <h3 class="output"></h3>
     <div class="rect"></div>
-    <div class="rect2"></div>
+    <button>click</button>
     <!-- <script src="random1to20.js"></script> -->
     <!-- <script src="randomArray.js"></script> -->
     <!-- <script src="randomBgc.js"></script> -->
@@ -32,7 +32,10 @@
     <!-- <script src="9encoDecode.js"></script> -->
     <!-- <script src="10regex.js"></script> -->
     <!-- <script src="11prototype.js"></script> -->
-    <script src="12try&catch.js"></script>
+    <!-- <script src="12try&catch.js"></script> -->
+    <!-- <script src="13xhr&fetch.js"></script> -->
+    <!-- <script src="14randomUser.js"></script> -->
+    <script src="15toDoList.js"></script>
 </body>
 
 </html>
