--- a/projects/028.fiftyProjects/04.Advanced/random 99/random99.html
+++ b/projects/028.fiftyProjects/04.Advanced/random 99/random99.html
@@ -9,7 +9,7 @@
         body {
             text-align: center;
             color: white;
-            background-color: green;
+            background-color: #2D1D51;
         }
         
         input {
@@ -24,8 +24,8 @@
 
 <body>
     <h1>Random 99</h1>
-    <input type="number" id="min" value="0">
-    <input type="number" id="max" value="6">
+    <input type="number" id="min" value="0" min="0">
+    <input type="number" id="max" value="6" max="99">
     <button id="show">show</button>
     <button id="random">random</button>
     <h1 class="output">99</h1>
