complete project 07.coinToss

--- a/projects/028.jsProjects/000.fiftyProjects/07.coinToss/index.html
+++ b/projects/028.jsProjects/000.fiftyProjects/07.coinToss/index.html
@@ -7,8 +7,8 @@
     <title>Coin Toss</title>
 </head>
 
-<body>
-    <div class="msg"></div>
+<body style="text-align: center;">
+    <div class="msg">Heads or Tails?</div>
     <button>Heads</button>
     <button>Tails</button>
     <script src="script.js"></script>
