complete the 12.functionator project

--- a/projects/028.jsProjects/000.fiftyProjects/04.Advanced/index.html
+++ b/projects/028.jsProjects/000.fiftyProjects/04.Advanced/index.html
@@ -20,11 +20,11 @@
     <!-- <button id="btn">click</button> -->
     <h3 class="output"></h3>
     <div class="rect"></div>
-    <button>click</button>
+    <!-- <button>click</button> -->
     <!-- <script src="random1to20.js"></script> -->
     <!-- <script src="randomArray.js"></script> -->
     <!-- <script src="randomBgc.js"></script> -->
-    <!-- <script src="4keyboardMover.js"></script> -->
+    <script src="4boxMover.js"></script>
     <!-- <script src="5dateMethod.js"></script> -->
     <!-- <script src="6LocalStorage.js"></script> -->
     <!-- <script src="7boundingClientRect.js"></script> -->
@@ -35,7 +35,7 @@
     <!-- <script src="12try&catch.js"></script> -->
     <!-- <script src="13xhr&fetch.js"></script> -->
     <!-- <script src="14randomUser.js"></script> -->
-    <script src="15toDoList.js"></script>
+    <!-- <script src="15toDoList.js"></script> -->
 </body>
 
 </html>
