--- a/projects/028.jsProjects/000.fiftyProjects/05.tipCalculator/index.html
+++ b/projects/028.jsProjects/000.fiftyProjects/05.tipCalculator/index.html
@@ -11,7 +11,16 @@
     <h2 class="output"></h2>
     <input type="number" value="100" id="inp">
     <button class="btn">Tip</button>
-    <script src="script.js"></script>
+    <script>
+        const h2 = document.querySelector('h2');
+        const inp = document.querySelector('input');
+        const btn = document.querySelector('button');
+
+        btn.addEventListener('click', function() {
+            let tip = (inp.value * 0.15).toFixed(2);
+            h2.innerHTML = `You should tip $${tip} on ${inp.value}`;
+        })
+    </script>
 </body>
 
 </html>
