--- a/projects/028.jsProjects/000.fiftyProjects/14.safeCracker/index.html
+++ b/projects/028.jsProjects/000.fiftyProjects/14.safeCracker/index.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Functionator</title>
+    <title>Super Safe Cracker</title>
+    <style>
+        .numb {
+            font-size: 2em;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- Completed at 6PM/July19/2020 -->
+    <div class="msg"></div>
+    <div class="game"></div>
+    <button>Start</button>
     <script src="script.js"></script>
 </body>
 
