--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-lg-4 mr-auto">
                     <p class="lead">
-                        I’ve built web applications using <b>HTML5, CSS3, Sass, Bootstrap, Javascript, JQuery</b> (and React soon) and have a foundation in web design and development. I've completed 300 hours of
+                        I’ve built web applications using <b>HTML5, CSS3, SCSS, Bootstrap, Javascript, JQuery</b> (and React soon) and have a foundation in web design and development. I've completed 300 hours of
                         <a href="http://www.freecodecamp.org">
                             <i style="color: white;">“Responsive Web Design Projects”</i>
                         </a>
@@ -249,9 +249,11 @@
         </div>
     </section>
 
+
     <!-- Contact Section -->
     <section class="page-section" id="contact">
         <div class="container">
+
 
             <!-- Contact Section Heading -->
             <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
@@ -583,7 +585,7 @@
                                 <!-- Portfolio Modal - Text -->
                                 <p class="mb-5">April 2020 - I thought I would have to write at least 100 lines of JavaScript code to get this to work. Boy was I wrong! It took only a few lines of code to build this awesome calculator.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
-                                <a class="btn btn-primary" href="projects/019.jsProjects/010-calculator/index.html" target="_blank">See Page</a>
+                                <a class="btn btn-primary" href="projects/028.jsProjects/010-calculator/index.html" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
@@ -713,7 +715,6 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
-
 </body>
 
 </html>
