add barchart to portfolio

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Theme CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -204,6 +205,41 @@
 
         </div>
     </section>
+
+    <div class="container barDiv">
+        <h1>Lines of Code (Sep 2019 - Present)</h1>
+        <p><b>Click</b> on the bars to see the number (k = 000) of lines of code I have written!</p>
+
+        <div class="myProgress">
+            <div class="total myBar">TOTAL</div>
+        </div>
+        <div class="myProgress">
+            <div class="css myBar">CSS</div>
+        </div>
+        <div class="myProgress">
+            <div class="html myBar">HTML</div>
+        </div>
+        <div class="myProgress">
+            <div class="js myBar">JS</div>
+        </div>
+        <div class="myProgress">
+            <div class="json myBar">
+                <div class="span" id="tooltip">JSON<span class="tooltiptext"> 6,834</span></div>
+            </div>
+        </div>
+        <div class="myProgress">
+            <div class="xml myBar">
+                <div class="span">XML</div>
+            </div>
+        </div>
+        <div class="myProgress">
+            <div class="sass myBar">
+                <div class="span">SASS</div>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 
     <!-- About Section -->
     <section class="page-section bg-primary text-white mb-0" id="about">
@@ -700,8 +736,6 @@
         </div>
     </div>
 
-
-
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -715,6 +749,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
