--- a/index.html
+++ b/index.html
@@ -368,10 +368,13 @@
                 <!-- Footer Social Icons -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/emuallim" target="_blank">
+                        <i class="fab fa-fw fa-github"></i>
+                    </a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/jmuhiddin" target="_blank">
                         <i class="fab fa-fw fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://t.me/Mbassador" target="_blank">
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://t.me/Muhiddinjv" target="_blank">
                         <i class="fab fa-fw fa-telegram"></i>
                     </a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/mukhiddin-jalilkhodjaev-9ab057190/" target="_blank">
