complete the 15.wordScramble project

--- a/projects/028.jsProjects/000.fiftyProjects/15.wordScramble/index.html
+++ b/projects/028.jsProjects/000.fiftyProjects/15.wordScramble/index.html
@@ -9,6 +9,11 @@
         .hidden {
             display: none;
         }
+        
+        .msg {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 
