--- a/projects/018.Nexter/index.html
+++ b/projects/018.Nexter/index.html
@@ -378,7 +378,7 @@
             <li><a href="#" class="nav__link">Come work with us!</a></li>
         </ul>
         <p class="copyright">
-            &copy; Copyright 2020 by Emuallim. Feel free to use this project for your own purposes. This does NOT apply if you plan to produce your own course or tutorials based on this project.
+            &copy; Copyright 2020 by Emuallim.
         </p>
     </footer>
 </body>
